# 200925

./: README.md
goal_queue_ros-master/: CMakeLists.txt  README.md  package.xml
goal_queue_ros-master/launch/: goal_queue.launch
goal_queue_ros-master/param/: target_pose (复件).txt  target_pose (第3个复件).txt  target_pose.txt
goal_queue_ros-master/src/: goal_queue_ros.cpp
navigation-kinetic-devel/global_planner/: CMakeLists.txt
navigation-kinetic-devel/global_planner/include/global_planner/: planner_core.h
navigation-kinetic-devel/global_planner/src/: planner_core.cpp
robot_voice/: CMakeLists.txt  README.md
robot_voice/msc/035b2f9f62deeb505674bcdb66247c03/: urec.data
robot_voice/src/: goal_move.cpp  iat_online_record_sample.c  iat_publish.cpp  tts_subscribe.cpp  voice_assistant.cpp  voice_goal.cpp
turtlebot_apps-indigo/turtlebot_navigation/launch/: my_amcl.launch
turtlebot_apps-indigo/turtlebot_navigation/launch/includes/: move_base.launch.xml
turtlebot_apps-indigo/turtlebot_navigation/param/: global_planner_params.yaml
